--- a/libgeotiff/test/testlistgeo_out.dist
+++ b/libgeotiff/test/testlistgeo_out.dist
@@ -221,11 +221,11 @@ Prime Meridian: 8901/Greenwich (0.000000/  0d 0' 0.00"E)
 Projection Linear Units: 9036/kilometre (1000.000000m)
 
 Corner Coordinates:
-Upper Left    (  440720.000, 3751320.000)  (-2147483648d-2147483648'  inf"E,-2147483648d-2147483648'  inf"N)
-Lower Left    (  440720.000, 3751260.000)  (-2147483648d-2147483648'  inf"E,-2147483648d-2147483648'  inf"N)
-Upper Right   (  440780.000, 3751320.000)  (-2147483648d-2147483648'  inf"E,-2147483648d-2147483648'  inf"N)
-Lower Right   (  440780.000, 3751260.000)  (-2147483648d-2147483648'  inf"E,-2147483648d-2147483648'  inf"N)
-Center        (  440750.000, 3751290.000)  (-2147483648d-2147483648'  inf"E,-2147483648d-2147483648'  inf"N)
+Upper Left    (  440720.000, 3751320.000)  (invalid)
+Lower Left    (  440720.000, 3751260.000)  (invalid)
+Upper Right   (  440780.000, 3751320.000)  (invalid)
+Lower Right   (  440780.000, 3751260.000)  (invalid)
+Center        (  440750.000, 3751290.000)  (invalid)
 
 Testing listgeo ../test/data/ProjectedCSTypeGeoKey_28191_cassini_soldner.tif
 Geotiff_Information:
