Add support for OGC GeoTIFF 1.1

--- a/libgeotiff/CMakeLists.txt
+++ b/libgeotiff/CMakeLists.txt
@@ -236,6 +236,7 @@ SET(GEOTIFF_LIB_HEADERS
     epsg_proj.inc
     epsg_vertcs.inc
     geokeys.inc
+    geokeys_v1_1.inc
     libxtiff/xtiffio.h)
 
 SET(GEOTIFF_MAN_PAGES
