--- a/libgeotiff/test/testlistgeo_out.dist
+++ b/libgeotiff/test/testlistgeo_out.dist
@@ -39,6 +39,47 @@ Upper Right   (  441920.000, 3751320.000)  (117d37'41.48"W, 33d54' 8.71"N)
 Lower Right   (  441920.000, 3750120.000)  (117d37'41.20"W, 33d53'29.75"N)
 Center        (  441320.000, 3750720.000)  (117d38' 4.70"W, 33d53'49.11"N)
 
+Testing listgeo ../test/data/byte_v11.tif
+Geotiff_Information:
+   Version: 1
+   Key_Revision: 1.1
+   Tagged_Information:
+      ModelTiepointTag (2,3):
+         0                 0                 0                
+         440720            3751320           0                
+      ModelPixelScaleTag (1,3):
+         60                60                0                
+      End_Of_Tags.
+   Keyed_Information:
+      GTModelTypeGeoKey (Short,1): ModelTypeProjected
+      GTRasterTypeGeoKey (Short,1): RasterPixelIsArea
+      GTCitationGeoKey (Ascii,21): "NAD27 / UTM zone 11N"
+      ProjectedCRSGeoKey (Short,1): Code-26711 (NAD27 / UTM zone 11N)
+      ProjLinearUnitsGeoKey (Short,1): Code-9001 (metre)
+      End_Of_Keys.
+   End_Of_Geotiff.
+
+PCS = 26711 (NAD27 / UTM zone 11N)
+Projection = 16011 (UTM zone 11N)
+Projection Method: CT_TransverseMercator
+   ProjNatOriginLatGeoKey: 0.000000 (  0d 0' 0.00"N)
+   ProjNatOriginLongGeoKey: -117.000000 (117d 0' 0.00"W)
+   ProjScaleAtNatOriginGeoKey: 0.999600
+   ProjFalseEastingGeoKey: 500000.000000 m
+   ProjFalseNorthingGeoKey: 0.000000 m
+GCS: 4267/NAD27
+Datum: 6267/North American Datum 1927
+Ellipsoid: 7008/Clarke 1866 (6378206.40,6356583.80)
+Prime Meridian: 8901/Greenwich (0.000000/  0d 0' 0.00"E)
+Projection Linear Units: 9001/metre (1.000000m)
+
+Corner Coordinates:
+Upper Left    (  440720.000, 3751320.000)  (117d38'28.21"W, 33d54' 8.47"N)
+Lower Left    (  440720.000, 3750120.000)  (117d38'27.92"W, 33d53'29.51"N)
+Upper Right   (  441920.000, 3751320.000)  (117d37'41.48"W, 33d54' 8.71"N)
+Lower Right   (  441920.000, 3750120.000)  (117d37'41.20"W, 33d53'29.75"N)
+Center        (  441320.000, 3750720.000)  (117d38' 4.70"W, 33d53'49.11"N)
+
 Testing listgeo ../test/data/pcs_32064.tif
 Geotiff_Information:
    Version: 1
