Remove INSTALL and install-sh autoconf-generated files
and no longer install INSTALL in CMake builds

Signed-off-by: Enrico Weigelt, metux IT consult <info@metux.net>

--- a/libgeotiff/CMakeLists.txt
+++ b/libgeotiff/CMakeLists.txt
@@ -245,7 +245,7 @@ SET(GEOTIFF_MAN_PAGES
 
 # Install doc files
 INSTALL(FILES
-    AUTHORS ChangeLog COPYING INSTALL LICENSE README README_BIN README.WIN
+    AUTHORS ChangeLog COPYING LICENSE README README_BIN README.WIN
     DESTINATION ${CMAKE_INSTALL_DOCDIR})
 
 # Install man pages
