--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,16 @@ matrix:
         - BUILD_NAME=linux
 
     - os: osx
+      language: objective-c
+      compiler: clang
+      cache:
+        apt: true
+        directories:
+          - $HOME/.ccache
       env:
         - BUILD_NAME=osx
+        - CC=clang
+        - CXX=clang++
       addons:
         homebrew:
             packages:
@@ -23,17 +31,21 @@ cache:
 
 before_install:
   - if test "$TRAVIS_OS_NAME" = "linux"; then sudo apt install g++ libjpeg-dev libz-dev libtiff-dev libsqlite3-dev; fi
+  - if test "$TRAVIS_OS_NAME" = "osx"; then brew update; brew install ccache; fi
 
 install:
-  - git clone --depth=1 https://github.com/OSGeo/proj.4 proj
-  - (cd proj && ./autogen.sh && CC="ccache gcc" CXX="ccache g++" ./configure && make -j3 && sudo make install && (if test "$TRAVIS_OS_NAME" = "linux"; then sudo ldconfig; fi))
+  - git clone --depth=1 https://github.com/OSGeo/PROJ proj
+  - export CC="ccache $CC"
+  - export CXX="ccache $CXX"
+  - $CC --version
+  - (cd proj && ./autogen.sh && ./configure && make -j3 && sudo make install && (if test "$TRAVIS_OS_NAME" = "linux"; then sudo ldconfig; fi))
   - cd libgeotiff
   - ./autogen.sh
   - ./configure
   - make dist
   - tar xvzf libgeotiff*.tar.gz
   - cd libgeotiff*
-  - CC="ccache gcc" CFLAGS="-Wall -Wextra -Werror" ./configure
+  - CFLAGS="-Wall -Wextra -Werror" ./configure
   - make -j3
   - make check
   - mkdir build
