--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -43,7 +43,7 @@ build_script:
         7z x sqlite-tools-win32-x86-3250100.zip
         copy sqlite-tools-win32-x86-3250100/sqlite3.exe .
 # Build PROJ
-  - git clone --depth=1 -b 6.2 https://github.com/OSGeo/proj.4 proj 
+  - git clone --depth=1 -b 6.3 https://github.com/OSGeo/PROJ proj
   - cd proj
   - mkdir build
   - cd build
@@ -58,7 +58,7 @@ build_script:
   - cd libgeotiff
   - mkdir build
   - cd build
-  - cmake -G "%VS_FULL%" .. -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release  -DCMAKE_C_FLAGS="/WX" -DCMAKE_CXX_FLAGS="/WX"  -DCMAKE_INSTALL_PREFIX="%BUILD_FOLDER%/install" -DPROJ_INCLUDE_DIR="%BUILD_FOLDER%/install/include" -DPROJ_LIBRARY="%BUILD_FOLDER%/install/lib/proj_6_2.lib" -DCMAKE_TOOLCHAIN_FILE=c:/projects/libgeotiff/vcpkg/scripts/buildsystems/vcpkg.cmake
+  - cmake -G "%VS_FULL%" .. -DBUILD_SHARED_LIBS=ON -DCMAKE_BUILD_TYPE=Release  -DCMAKE_C_FLAGS="/WX" -DCMAKE_CXX_FLAGS="/WX"  -DCMAKE_INSTALL_PREFIX="%BUILD_FOLDER%/install" -DPROJ_INCLUDE_DIR="%BUILD_FOLDER%/install/include" -DPROJ_LIBRARY="%BUILD_FOLDER%/install/lib/proj.lib" -DCMAKE_TOOLCHAIN_FILE=c:/projects/libgeotiff/vcpkg/scripts/buildsystems/vcpkg.cmake
   - cmake --build . --config Release --target install
 
 test_script:
