--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
   - export CC="ccache $CC"
   - export CXX="ccache $CXX"
   - $CC --version
-  - (cd proj && ./autogen.sh && ./configure && make -j3 && sudo make install && (if test "$TRAVIS_OS_NAME" = "linux"; then sudo ldconfig; fi))
+  - (cd proj && cmake . -DBUILD_APPS=OFF -DPROJ_TESTS=OFF && make -j3 && sudo make install && (if test "$TRAVIS_OS_NAME" = "linux"; then sudo ldconfig; fi))
   - cd libgeotiff
   - ./autogen.sh
   - ./configure
