CMake: avoid INTERFACE_LINK_LIBRARIES vs LINK_INTERFACE_LIBRARIES_DEBUG warning about TIFF
when using vcpkg to find TIFF dependency and with -DCMAKE_BUILD_TYPE=Release

Cf
```
CMake Warning (dev) in CMakeLists.txt:
  Policy CMP0022 is not set: INTERFACE_LINK_LIBRARIES defines the link
  interface.  Run "cmake --help-policy CMP0022" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  Target "geotiff_library" has an INTERFACE_LINK_LIBRARIES property which
  differs from its LINK_INTERFACE_LIBRARIES_DEBUG properties.

  INTERFACE_LINK_LIBRARIES:

    $<$<NOT:$<CONFIG:DEBUG>>:C:/vcpkg/installed/x64-windows/lib/tiff.lib>;$<$<CONFIG:DEBUG>:C:/vcpkg/installed/x64-windows/debug/lib/tiffd.lib>

  LINK_INTERFACE_LIBRARIES_DEBUG:

    C:/vcpkg/installed/x64-windows/debug/lib/tiffd.lib
```

from https://github.com/OSGeo/libgeotiff/runs/5311074542?check_suite_focus=true

--- a/libgeotiff/CMakeLists.txt
+++ b/libgeotiff/CMakeLists.txt
@@ -328,11 +328,19 @@ endif()
 SET_TARGET_PROPERTIES(${GEOTIFF_LIBRARY_TARGET} PROPERTIES
    OUTPUT_NAME ${GEOTIFF_LIB_NAME})
 
-TARGET_LINK_LIBRARIES(${GEOTIFF_LIBRARY_TARGET} PUBLIC
+if(TARGET TIFF::TIFF)
+target_link_libraries(${GEOTIFF_LIBRARY_TARGET} PUBLIC TIFF::TIFF)
+else()
+target_link_libraries(${GEOTIFF_LIBRARY_TARGET} PUBLIC
     ${TIFF_LIBRARIES})
+endif()
 
-TARGET_LINK_LIBRARIES(${GEOTIFF_LIBRARY_TARGET} PRIVATE
+if(TARGET PROJ::proj)
+target_link_libraries(${GEOTIFF_LIBRARY_TARGET} PRIVATE PROJ::proj)
+else()
+target_link_libraries(${GEOTIFF_LIBRARY_TARGET} PRIVATE
     ${PROJ_LIBRARIES})
+endif()
 
 target_include_directories(
   ${GEOTIFF_LIBRARY_TARGET}
