--- a/libgeotiff/cmake/project-config.cmake.in
+++ b/libgeotiff/cmake/project-config.cmake.in
@@ -3,14 +3,9 @@
 # Set
 #  @PROJECT_NAME@_FOUND = 1
 #  @PROJECT_NAME@_INCLUDE_DIRS = /usr/local/include
-#  @PROJECT_NAME@_SHARED_LIBRARIES = geotiff_library
-#  @PROJECT_NAME@_STATIC_LIBRARIES = geotiff_archive
 #  @PROJECT_NAME@_LIBRARY_DIRS = /usr/local/lib
 #  @PROJECT_NAME@_BINARY_DIRS = /usr/local/bin
 #  @PROJECT_NAME@_VERSION = 1.4.1 (for example)
-#  Depending on @PROJECT_NAME@_USE_STATIC_LIBS
-#    @PROJECT_NAME@_LIBRARIES = ${@PROJECT_NAME@_SHARED_LIBRARIES}, if OFF
-#    @PROJECT_NAME@_LIBRARIES = ${@PROJECT_NAME@_STATIC_LIBRARIES}, if ON
 
 # For compatibility with FindGeoTIFF.cmake, also set
 # @PROJECT_NAME_UPPER@_FOUND
@@ -29,27 +24,22 @@ get_filename_component (_ROOT "${_DIR}/@PROJECT_ROOT_DIR@" ABSOLUTE)
 set (@PROJECT_NAME@_INCLUDE_DIRS "${_ROOT}/include")
 set (@PROJECT_NAME@_LIBRARY_DIRS "${_ROOT}/lib")
 set (@PROJECT_NAME@_BINARY_DIRS "${_ROOT}/bin")
-
-message (STATUS "  include directory: \${@PROJECT_NAME@_INCLUDE_DIRS}")
-
-if(BUILD_SHARED_LIBS)
-set (@PROJECT_NAME@_SHARED_LIBRARIES @GEOTIFF_LIBRARY_TARGET@)
-else()
-set (@PROJECT_NAME@_STATIC_LIBRARIES @GEOTIFF_LIBRARY_TARGET@)
-endif()
-# Read in the exported definition of the library
-include ("${_DIR}/@PROJECT_NAME_LOWER@-depends.cmake")
-
 unset (_ROOT)
 unset (_DIR)
 
-if (@PROJECT_NAME@_USE_STATIC_LIBS)
-  set (@PROJECT_NAME@_LIBRARIES ${@PROJECT_NAME@_STATIC_LIBRARIES})
-  message (STATUS "  \${@PROJECT_NAME@_LIBRARIES} set to static library")
-else ()
-  set (@PROJECT_NAME@_LIBRARIES ${@PROJECT_NAME@_SHARED_LIBRARIES})
+message (STATUS "  include directory: \${@PROJECT_NAME@_INCLUDE_DIRS}")
+
+set (@PROJECT_NAME@_LIBRARIES @GEOTIFF_LIBRARY_TARGET@)
+if("@BUILD_SHARED_LIBS@")
   message (STATUS "  \${@PROJECT_NAME@_LIBRARIES} set to shared library")
-endif ()
+  set (@PROJECT_NAME@_SHARED_LIBRARIES ${@PROJECT_NAME@_LIBRARIES})
+else()
+  message (STATUS "  \${@PROJECT_NAME@_LIBRARIES} set to static libraries")
+  set (@PROJECT_NAME@_STATIC_LIBRARIES ${@PROJECT_NAME@_LIBRARIES})
+endif()
+
+# Read in the exported definition of the library
+include ("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME_LOWER@-depends.cmake")
 
 # For compatibility with FindGeoTIFF.cmake
 set (@PROJECT_NAME_UPPER@_FOUND 1)
