--- a/libgeotiff/CMakeLists.txt
+++ b/libgeotiff/CMakeLists.txt
@@ -73,8 +73,10 @@ SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
 # Platform and compiler specific settings
 
 IF(WIN32)
-    IF(MSVC)
+    IF(BUILD_SHARED_LIBS)
         ADD_DEFINITIONS(-DBUILD_AS_DLL=1)
+    ENDIF()
+    IF(MSVC)
         ADD_DEFINITIONS(/DW4)
         if (NOT (MSVC_VERSION VERSION_LESS 1400))
             ADD_DEFINITIONS(-D_CRT_SECURE_NO_DEPRECATE)
