CMake: adopt GNUInstallDirs
This makes it a lot easier for packagers (it happens by default
if we've setup our environment correctly) to have files installed in the right
places, including libdir, but also documentation, which can vary.

This works cross-platform still but it means libgeotiff uses the
standard options which CMake projects tend to use for such locations
and therefore no special treatment is needed when packaging it.

Fixes: https://github.com/OSGeo/libgeotiff/issues/33
Signed-off-by: Sam James <sam@gentoo.org>

--- a/libgeotiff/bin/CMakeLists.txt
+++ b/libgeotiff/bin/CMakeLists.txt
@@ -41,6 +41,6 @@ MESSAGE(STATUS "Adding GeoTIFF utilities to build - done: ${GEOTIFF_UTILITIES}")
 # Targets installation
 
 INSTALL(TARGETS ${GEOTIFF_UTILITIES}
-    RUNTIME DESTINATION ${GEOTIFF_BIN_DIR}
-    LIBRARY DESTINATION ${GEOTIFF_LIB_DIR}
-    ARCHIVE DESTINATION ${GEOTIFF_LIB_DIR})
+    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
+    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+    ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR})
