--- a/libgeotiff/cmake/project-config.cmake.in
+++ b/libgeotiff/cmake/project-config.cmake.in
@@ -22,13 +22,14 @@ set (@PROJECT_NAME@_BINARY_DIRS "${_ROOT}/bin")
 unset (_ROOT)
 unset (_DIR)
 
+include(CMakeFindDependencyMacro)
+@CONFIG_PUBLIC_DEPENDENCIES@
 set (@PROJECT_NAME@_LIBRARIES @GEOTIFF_LIBRARY_TARGET@)
 if("@BUILD_SHARED_LIBS@")
   set (@PROJECT_NAME@_SHARED_LIBRARIES ${@PROJECT_NAME@_LIBRARIES})
 else()
   set (@PROJECT_NAME@_STATIC_LIBRARIES ${@PROJECT_NAME@_LIBRARIES})
-  include(CMakeFindDependencyMacro)
-@CONFIG_DEPENDENCIES@
+@CONFIG_PRIVATE_DEPENDENCIES@
 endif()
 
 if(NOT @PROJECT_NAME@_FIND_QUIETLY)
