--- a/libgeotiff/libgeotiff.pc.in
+++ b/libgeotiff/libgeotiff.pc.in
@@ -1,10 +1,10 @@
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 libdir=@libdir@
-includedir=%@includedir@
+includedir=@includedir@
 
 Name: @PACKAGE_NAME@
 Description: GeoTIFF file format library
 Version: @VERSION@
-Libs: -L\${libdir} -lgeotiff
-Cflags: -I\${includedir}
+Libs: "-L${libdir}" -lgeotiff
+Cflags: "-I${includedir}"
