Add Requires.private to pkg_config file

--- a/libgeotiff/libgeotiff.pc.in
+++ b/libgeotiff/libgeotiff.pc.in
@@ -8,3 +8,4 @@ Description: GeoTIFF file format library
 Version: @VERSION@
 Libs: "-L${libdir}" -lgeotiff
 Cflags: "-I${includedir}"
+Requires.private: proj, libtiff-4
