Clean up libgeotiff.pc.in to use only CMake config

--- a/libgeotiff/CMakeLists.txt
+++ b/libgeotiff/CMakeLists.txt
@@ -340,11 +340,10 @@ INSTALL( TARGETS ${GEOTIFF_LIBRARY_TARGET}
      ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 
 # Install libgeotiff.pc
-SET(prefix ${CMAKE_INSTALL_PREFIX})
-SET(exec_prefix ${CMAKE_INSTALL_PREFIX})
-SET(includedir ${prefix}/${CMAKE_INSTALL_INCLUDEDIR})
-SET(libdir ${prefix}/${CMAKE_INSTALL_LIBDIR})
+SET(includedir ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_INCLUDEDIR})
+SET(libdir ${CMAKE_INSTALL_PREFIX}/${CMAKE_INSTALL_LIBDIR})
 SET(PACKAGE_NAME ${PROJECT_NAME})
+SET(VERSION ${PROJECT_VERSION})
 configure_file(libgeotiff.pc.in ${CMAKE_CURRENT_BINARY_DIR}/libgeotiff.pc)
 
 INSTALL(
