--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,6 +22,8 @@ build_script:
 # Build vcpkg
   - git clone https://github.com/microsoft/vcpkg
   - cd vcpkg
+  # Remove this after this is fixed: https://github.com/microsoft/vcpkg/issues/33904
+  - git checkout 2023.08.09
   - bootstrap-vcpkg.bat
   - set PATH=%CD%;%PATH%
   - cd ..
