--- a/libgeotiff/cmake/CMakeLists.txt
+++ b/libgeotiff/cmake/CMakeLists.txt
@@ -30,3 +30,48 @@ install (FILES
 install (EXPORT depends
   FILE ${PROJECT_NAME_LOWER}-depends.cmake
   DESTINATION "${INSTALL_CMAKE_DIR}")
+
+
+#  ------------------------------------------------------------------------------
+  # CPACK controls
+  #------------------------------------------------------------------------------
+
+
+  SET(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
+  SET(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
+  SET(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
+  SET(CPACK_PACKAGE_NAME "GeoTIFF")
+
+  SET(CPACK_SOURCE_GENERATOR "TBZ2;TGZ;ZIP")
+  SET(CPACK_PACKAGE_VENDOR "GeoTIFF Development Team")
+  SET(CPACK_RESOURCE_FILE_LICENSE    "${PROJECT_SOURCE_DIR}/LICENSE")
+
+  set(CPACK_SOURCE_PACKAGE_FILE_NAME
+      "lib${PROJECT_NAME_LOWER}-${GeoTIFF_VERSION}")
+
+  set(CPACK_SOURCE_IGNORE_FILES
+    "/\\\\.gitattributes"
+    "/\\\\.DS_Store"
+    "/\\\\.git/"
+    "\\\\.swp$"
+    "~$"
+    "\\\\.\\\\#"
+    "/\\\\#"
+    "CMakeScripts/"
+    "COPYING-CMAKE-SCRIPTS"
+    "_CPack_Packages"
+    "cmake_install.cmake"
+    ".gitignore"
+    ".ninja"
+    ".deps"
+    "HOWTORELEASE.txt"
+    "README"
+    "build/"
+    "CMakeFiles"
+    "CTestTestfile.cmake"
+    ".gz"
+    ".bz2"
+  )
+
+  include(CPack)
+  add_custom_target(dist COMMAND ${CMAKE_MAKE_PROGRAM} package_source)
