--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -81,6 +81,8 @@ jobs:
        working-directory: ./libgeotiff/build
      - name: Attest
        uses: actions/attest-build-provenance@v1
+       if: matrix.os == 'ubuntu-latest' && matrix.shared == 'ON' && startsWith(github.ref, 'refs/tags/')
+       #&& github.repository_owner == 'OSGeo'
        with:
           subject-path: './libgeotiff/build/libgeotiff-*'
      - uses: actions/upload-artifact@v4
@@ -98,8 +100,8 @@ jobs:
     needs: build
     permissions:
       contents: write
-      attestations: write
       id-token: write
+      attestations: write
     steps:
      - uses: actions/download-artifact@v4
        name: Download release artifact
