--- a/libgeotiff/CMakeLists.txt
+++ b/libgeotiff/CMakeLists.txt
@@ -349,8 +349,10 @@ INSTALL( TARGETS ${GEOTIFF_LIBRARY_TARGET}
      PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
      ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR} )
 
-IF (MSVC and BUILD_SHARED_LIBS)
+IF (MSVC)
+IF (BUILD_SHARED_LIBS)
     INSTALL(FILES $<TARGET_PDB_FILE:${GEOTIFF_LIBRARY_TARGET}> DESTINATION ${CMAKE_INSTALL_BINDIR} OPTIONAL)
+ENDIF (BUILD_SHARED_LIBS)
 ENDIF (MSVC)
 
 # Install libgeotiff.pc
